# testutil

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  fetch_metadata.sh  rust-toolchain.toml
.github/workflows/: rust.yml
docker/: cosmos.Dockerfile  hermes.Dockerfile
src/: lib.rs
src/containers/: btc.rs  cosmos.rs  ggx.rs  hermes.rs  interbtc_clients.rs  mod.rs
src/containers/ggx/: assets_pallet.rs  dex_pallet.rs  mod.rs
src/metadata/: README.md  fetch.sh  metadata_ggx_brooklyn.scale  metadata_ggx_sydney.scale  mod.rs
tests/: README.md  e2e_btc_test.rs  e2e_dex_test.rs  e2e_ibc_test.rs
