[package]
name = "testutil"
version = "0.1.0"
edition = "2021"

[features]
# intentionally no default features enabled
default = ["brooklyn"]
brooklyn = []

[dependencies]
bitcoincore-rpc = "0.18.0"
testcontainers = { version = "^0.16.7" }
tokio = { version = "^1", features = ["full"] }
subxt = { version = "0.31.0", git = "https://github.com/paritytech/subxt", tag = "v0.31.0" }
subxt-signer = { version = "0.31.0", git = "https://github.com/paritytech/subxt", tag = "v0.31.0", features = [
    "subxt",
] }
bitcoin = { git = "https://github.com/ggxchain/interbtc.git", branch = "polkadot-v0.9.43", default-features = false }
hex = { version = "0.4.3", features = ["serde"] }
log = "^0.4"
reqwest = { version = "0.12.4", features = ["json"] }
anyhow = "1.0.82"
rust_decimal = { version = "1.35.0", features = ["serde_json"] }
serde = "1.0.200"
sha2 = "0.10.8"
futures = "0.3.30"

[dev-dependencies]
env_logger = "0.11.3"

